# cash

./: .env.template  .gitignore  README.md  UV_MIGRATION.md  config.yaml  pyproject.toml  reload_settings.py  requirements.txt  run_app.py  scripts.py  serve.py  setup.ps1  setup.py  setup.sh  test_embeddings.py  test_imports.py  test_improved_pipeline.py  test_janitor.py  test_janitor_api.py  test_janitor_fix.py  test_langtrace.py  test_notion_formatting.py
app/: main.py
app/agents/: __init__.py  agents.py  technical_analysis_agent.py
app/api/: routes.py
app/config/: agent_config.py  config_loader.py
app/core/: config.py  data_preservation.py  notion_formatting.py  settings.py
app/llm/: __init__.py  llm_factory.py
app/models/: transcript.py  video.py
app/routes/: settings_routes.py
app/services/: __init__.py  content_analyzer.py  embedding_service.py  janitor_service.py  json_utils.py  llm_service.py  log_streamer.py  model_config.py  model_manager.py  report_generator.py  vector_store.py  video_processor.py  video_queue.py
app/static/: app.js  index.html  test.html
app/tools/: notion_tool.py  notion_tool_v2.py  pinecone_tool.py  pinecone_tool_v2.py
app/utils/: __init__.py  langtrace_utils.py  path_utils.py
data/temp/: 922dc49f-a8ff-490f-8436-be6fed8b8a59_report.json  eb6ffe1b-6a54-49e9-922d-7160a29fec94_report.json  fefbee03-19fc-4c39-a68d-55330e891616_report.json
debug/: consolidated_summary_1737477972.json  consolidated_summary_1737482129.json  consolidated_summary_1737486536.json  consolidated_summary_1737486964.json  consolidated_summary_1737488479.json  consolidated_summary_1737491085.json  consolidated_summary_1737491727.json  consolidated_summary_1737510850.json  consolidated_summary_1737511015.json  consolidated_summary_1737511233.json  consolidated_summary_1737511648.json  consolidated_summary_1737512035.json  consolidated_summary_1737512697.json  consolidated_summary_1737537190.json  consolidated_summary_1737538542.json  consolidated_summary_1737538858.json  consolidated_summary_1737538931.json  consolidated_summary_1737539103.json  consolidated_summary_1737543398.json  consolidated_summary_1737543992.json  consolidated_summary_1737544783.json  consolidated_summary_1737545953.json  consolidated_summary_1737546166.json  consolidated_summary_1737546339.json  consolidated_summary_1737546770.json  consolidated_summary_1737547744.json
tests/: test_notion_v2.py  test_pinecone_v2.py
video_analyzer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
